--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.0",
-    "node-switchbot": "1.2.0",
+    "node-switchbot": "github:patrickbs96/node-switchbot#beta",
     "@abandonware/noble": "1.9.2-15"
   },
   "engines": {
